--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body {
   background-size: 100%;
   background-position: top;
 }
-
 .form-control {
   background-color: rgba(255, 255, 255, 0.2);
   padding: 22px;
@@ -17,13 +16,15 @@ body {
   border-radius: 1.5rem;
   padding: 9px 20px;
 }
-
 .btn-previous {
   background: rgba(255, 255, 255, 0.2);
   color: #ffffff;
 }
 .navbar-toggler {
   border: none;
+}
+.header-title {
+  color: #3bd96e;
 }
 .search-box {
   position: relative;
@@ -34,7 +35,39 @@ body {
   right: 0;
   height: 100%;
 }
-.single-result {
+.song-result {
+  width: 100%;
   background: rgba(255, 255, 255, 0.2);
   border-radius: 15px;
+}
+.output {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.output-content {
+  background-color: whitesmoke;
+  color: lightskyblue;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid rgb(95, 95, 95);
+  width: 60%;
+  border-radius: 15px;
+}
+.lyrics-name {
+  margin-bottom: 20px;
+}
+.lyrics-text {
+  color: lightsalmon;
+}
+.song-detail {
+  color: whitesmoke;
 }
